--- a/codequiz-server/quiz/templates/tasks/cq0_main_base.html
+++ b/codequiz-server/quiz/templates/tasks/cq0_main_base.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 
-<!-- this template was designed by http://www.tristarwebdesign.co.uk - please visit for more templates & information - thank you. -->
-
-
 {# This template is the base for all top level templates which provide a view of a task #}
 {# it operates with ++ blocks ++ #}
 
@@ -93,8 +90,7 @@
             <p><a title="back to top" href="#container"><strong>^ back to top</strong></a></p>
         </div>
         <div id="footer_right">
-            <p><a title="derby web design" href="http://www.tristarwebdesign.co.uk">template by <strong>tristar</strong></a>
-            </p>
+                <p>&copy; 2013 Carsten Knoll</p>
         </div>
     </div>
 </div>
