--- a/codequiz-server/quiz/templates/tasks/cq0_main_base.html
+++ b/codequiz-server/quiz/templates/tasks/cq0_main_base.html
@@ -9,6 +9,7 @@
 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     {% load staticfiles %}
+    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}tasks/reset.css"/>
     <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}tasks/tabular_style.css?{% now "U" %}"/>
     <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}tasks/1152_16_col.css?{% now "U" %}"/>
     <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}tasks/style2.css?{% now "U" %}"/>
