--- a/codequiz-server/quiz/templates/tasks/z_cq1_task_content.html
+++ b/codequiz-server/quiz/templates/tasks/z_cq1_task_content.html
@@ -23,7 +23,7 @@
 
     {% for s in mb.html_strings %}
         {{ s|safe }}
-        <div class="clear"></div>
+{#        <div class="clear"></div>#}
     {% endfor %}
 
     <!-- Buttons: -->
