Add CSS-anti-caching hack to more template files

--- a/codequiz-server/quiz/templates/tasks/index.html
+++ b/codequiz-server/quiz/templates/tasks/index.html
@@ -1,7 +1,7 @@
 <!-- ==> start: index.html -->
 {% load staticfiles %}
 
-<link rel="stylesheet" type="text/css" href="{% static 'tasks/style.css' %}"/>
+<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}tasks/style.css?{% now "U" %}"/>
 
 
 <div class="klasse1">
