--- a/codequiz-server/quiz/static/tasks/style2.css
+++ b/codequiz-server/quiz/static/tasks/style2.css
@@ -134,6 +134,7 @@ input[type="submit"]:hover {
 
 #header_right {
     float: left;
+    font-size: 1.2em;
 }
 
 #header_right ul {
@@ -247,17 +248,6 @@ pre {
     /*  color: #F90; */
     /* orange */
     border-bottom: 1px solid #E5E5E5;
-}
-
-#main_left {
-    float: left;
-    /*     padding: 0 15px 0 0; */
-    font-size: 110%;
-}
-
-#main_right {
-    float: left;
-    /*     padding: 0 0 0 15px; */
 }
 
 #bottom {
