--- a/codequiz-server/quiz/templates/tasks/cq0_main_base.html
+++ b/codequiz-server/quiz/templates/tasks/cq0_main_base.html
@@ -40,11 +40,11 @@
     {% block header %}
         <div id="header_container">
             <div class="grid_10" id="header_left">
-                <h1>Code<span id="color1">Quiz</span><span id="css_version">beta0.4</span></h1>
+                <h1>Code<span id="color1">Quiz</span> <span id="css_version">beta 0.4</span></h1>
             </div>
             <div class="grid_6" id="header_right">
                 <ul>
-                    <li><a title="home" href="{% url 'quiz_ns:index' %}">home</a></li>
+                    <li><a title="home" href="{% url 'quiz_ns:index' %}"><i class="fa fa-home"></i> home</a></li>
                     <li>|</li>
                     <li><a class="active" title="quiz" href="{% url 'quiz_ns:task_collection_view' 1 %}">quiz</a></li>
                     <li>|</li>
@@ -57,7 +57,7 @@
 
     <div id="main_container">
 
-        <div class="grid_12" id="main_left">
+        <div class="grid_12">
 
             {% block main_left %}
 
@@ -69,16 +69,13 @@
 
         <!-- End of main_left -->
 
-
-        <div class="grid_4" id="main_right">
-
+        <div class="grid_4">
 
             {% block main_right %}
 
                 content of right column
 
             {% endblock %}
-
 
         </div>
         <div class="clear"></div>
@@ -88,7 +85,7 @@
 
     <div id="footer_container">
         <div id="footer_left">
-            <p><a title="back to top" href="#container"><strong>^ back to top</strong></a></p>
+            <p><a title="back to top" href="#"><i class="fa fa-arrow-circle-up"></i> back to top</a></p>
         </div>
         <div id="footer_right">
                 <p>&copy; 2013 Carsten Knoll</p>
