--- a/codequiz-server/quiz/templates/tasks/cq0_main_base.html
+++ b/codequiz-server/quiz/templates/tasks/cq0_main_base.html
@@ -56,6 +56,7 @@
     {% endblock %}
 
     <div id="main_container">
+    {% block main %}
 
         <div class="grid_12">
 
@@ -81,6 +82,7 @@
         <div class="clear"></div>
 
         <!-- End of main_right -->
+    {% endblock %}
     </div>
 
     <div id="footer_container">
