Remove Imprint, add about page

--- a/codequiz-server/quiz/templates/tasks/cq0_main_base.html
+++ b/codequiz-server/quiz/templates/tasks/cq0_main_base.html
@@ -49,6 +49,8 @@
                     <li><a class="active" title="quiz" href="{% url 'quiz_ns:task_collection_view' 1 %}">quiz</a></li>
                     <li>|</li>
                     <li><a title="admin" href="{% url 'admin:index' %}">admin</a></li>
+                    <li>|</li>
+                    <li><a title="admin" href="{% url 'quiz_ns:about' %}">about</a></li>
                 </ul>
             </div>
             <div class="clear"></div>
@@ -90,7 +92,7 @@
             <p><a title="back to top" href="#"><i class="fa fa-arrow-circle-up"></i> back to top</a></p>
         </div>
         <div id="footer_right">
-            <p><a title="home" href="{% url 'quiz_ns:imprint' %}"><i class="fa fa-info"></i> Imprint / Impressum</a></p>
+
         </div>
     </div>
 </div>
