fix small template (content) bug

--- a/codequiz-server/quiz/templates/about.html
+++ b/codequiz-server/quiz/templates/about.html
@@ -7,13 +7,13 @@ one specific course (Python for Engineers), held in two universities [1].
 <br>
 The web application is implemented in Python using the django framework.
 It is still under active development, as user comments reveal bugs and suggest features. 
-The project is open source and anybody is encouraged to use it and/or to contribute.
+The project is open source and anybody is encouraged to use it and/or to contribute [2].
 <br>
 <br>
 [1] <a title="http://tu-dresden.de/pythonkurs" href="http://tu-dresden.de/pythonkurs">http://tu-dresden.de/pythonkurs</a></li>
 <br>
 <br>
-[1] <a title="github" href="https://github.com/cknoll/codequiz-server">https://github.com/cknoll/codequiz-server</a></li>
+[2] <a title="github" href="https://github.com/cknoll/codequiz-server">https://github.com/cknoll/codequiz-server</a></li>
 <br>
 <br>
 </p>
