--- a/codequiz-server/quiz/templates/tasks/cq2_input_field.html
+++ b/codequiz-server/quiz/templates/tasks/cq2_input_field.html
@@ -8,11 +8,11 @@
     {% if text_slots.0.type == "source" %}
         <pre class="src">{{ text_slots.0.content }}</pre>
     {% else %}
-        <span class="normal">{{ text_slots.0.content }}</span>
+        <span class="normal">{{ text_slots.0.content | safe }}</span>
     {% endif %}
 </div>
 <div class="grid_4{% if not print_solution %} suffix_4 omega{% endif %}" id="input_field">
-    <textarea class="disablecopypaste" style="width: 100%" name="le_idx_{{ idx }}" rows="{{ lines }}"
+    <textarea class="disablecopypaste" style="width: 100%" name="answer_{{ idx }}" rows="{{ lines }}"
               autocomplete="off">{{ prefilled_text }}</textarea>
 </div>
 
