Fix and alter tinyMCE editor
Added <code> button that toggles the selection style
Removed buttons, added some other
Fixed problem with drop down menus, therefore kept the "Formats" menu for now.
Threw out some plugins, added some other.

--- a/codequiz-server/builder/static/builder/style.css
+++ b/codequiz-server/builder/static/builder/style.css
@@ -104,6 +104,6 @@ select.inline {
     cursor: move;
 }
 
-.mce-panel:not(.mce-edit-area) {
+.mce-panel:not(.mce-edit-area):not(.mce-floatpanel) {
     width: 89% !important;
 }
