--- a/codequiz-server/quiz/templates/tasks/cq2_cbox.html
+++ b/codequiz-server/quiz/templates/tasks/cq2_cbox.html
@@ -22,6 +22,7 @@
         <pre class="{{ css_class }}">{{ printed_solution }}</pre>
     </div>
 {% endif %}
+<div class="clear"></div>
 
 <!-- ==> end: cbox.html -->
 
