--- a/codequiz-server/builder/static/builder/style.css
+++ b/codequiz-server/builder/static/builder/style.css
@@ -46,6 +46,7 @@ a.removeinput {
     margin: 0;
     padding: 0;
     width: 100%;
+    min-width: 1000px;
 }
 
 #sortable li {
@@ -55,8 +56,7 @@ a.removeinput {
     padding: 0.2em;
     padding-left: 1.5em;
     font-size: 1.4em;
-    width: 80%;
-    /*height: 18px;*/
+    width: 95%;
     background-color: #ddebff;
 }
 
@@ -64,6 +64,16 @@ a.removeinput {
     position: absolute;
     margin-left: -1.3em;
     margin-top: 0.2em
+}
+
+div.column textarea {
+    width:60%;
+    min-height:16px;
+    resize: vertical;
+}
+
+div.column select {
+    width:20%;
 }
 
 textarea.wide {
@@ -78,12 +88,30 @@ input {
     width: 160px;
 }
 
+input[type="checkbox"] {
+    vertical-align: middle;
+    background-color: red;
+}
+
 input.source {
     font-family: monospace;
 }
 
 input.comment {
     background-color: #a4e68e;
+}
+
+div.column {
+    float: left;
+}
+
+.clear {
+    clear: both;
+    display: block;
+    overflow: hidden;
+    visibility: hidden;
+    width: 0;
+    height: 0;
 }
 
 #sortable li.comment {
