--- a/codequiz-server/builder/static/builder/style.css
+++ b/codequiz-server/builder/static/builder/style.css
@@ -1,10 +1,4 @@
-div.dynamic {
-    margin: 10px;
-    padding: 5px;
-    border-width: 1px;
-    border-color: #000000;
-}
-
+/* Segment add buttons */
 a.add {
     margin: 5px;
     padding: 5px;
@@ -13,6 +7,7 @@ a.add {
     border-radius: 5px;
 }
 
+/* Segment delete button (little white cross on red) */
 a.delete {
     position: absolute;
     right: 5px;
@@ -25,113 +20,92 @@ a.delete {
     font-size: 0.5em;
 }
 
+/* Green plus icon */
 a.addinput {
     color: #46ca35;
     font-size: 0.5em;
-    margin-left: -1.5em;
-    position: relative;
-    top: -2px;
+    margin-left: 1.5em;
+    position: absolute;
+    top: 5px;
 }
 
+/* Red minus icon */
 a.removeinput {
     color: #9d1315;
     font-size: 0.5em;
-    padding-right: 1em;
-    position: relative;
-    top: -2px;
+    margin-left: 3.5em;
+    position: absolute;
+    top: 5px;
 }
 
+/* The jQuery UI Sortable container */
 #sortable {
     list-style-type: none;
     margin: 0;
     padding: 0;
     width: 100%;
-    min-width: 1000px;
 }
 
 #sortable li {
     list-style-type: none;
     position: relative;
     margin: 0 3px 3px 3px;
-    padding: 0.2em;
-    padding-left: 1.5em;
+    padding: 0.2em 0.2em 0.2em 1.5em;
     font-size: 1.4em;
-    width: 95%;
     background-color: #ddebff;
 }
 
+/* the little up/down arrow that indicates drag and drop */
 #sortable li span.ui-icon {
     position: absolute;
     margin-left: -1.3em;
     margin-top: 0.2em
 }
 
-div.column textarea {
-    width:60%;
-    min-height:16px;
+/* inside the grid, style the textarea and selects to fit without line break */
+div.grid_5 textarea {
+    width:70%;
+    min-height: 16px;
     resize: vertical;
 }
 
-div.column select {
-    width:20%;
+div.grid_5 select {
+    min-height: 16px;
 }
 
+div.grid_4 textarea {
+    width:70%;
+    min-height: 16px;
+    resize: vertical;
+}
+
+div.grid_4 select {
+    min-height: 16px;
+}
+
+/* make the full width textareas actually full width (not just x chars wide) */
 textarea.wide {
-    width: 89%;
+    width: 100%;
 }
 
+/* show monospace font for textareas (that are not ACE) */
 textarea.source {
     font-family: monospace;
+    font-size: 0.8em;
 }
 
-input {
-    width: 160px;
-}
-
-input[type="checkbox"] {
-    vertical-align: middle;
-    background-color: red;
-}
-
-input.source {
-    font-family: monospace;
-}
-
-input.comment {
-    background-color: #a4e68e;
-}
-
-div.column {
-    float: left;
-}
-
-.clear {
-    clear: both;
-    display: block;
-    overflow: hidden;
-    visibility: hidden;
-    width: 0;
-    height: 0;
-}
-
+/* green background to indicate a comment segment */
 #sortable li.comment {
     background-color: #a4e68e;
 }
 
+/* make right aligned select boxes cling to the right */
 select.right {
     position: absolute;
     right: 10px;
     bottom: 3px;
 }
 
-select.inline {
-    margin-right: 20px;
-}
-
 .handle {
     cursor: move;
-}
-
-.mce-panel:not(.mce-edit-area):not(.mce-floatpanel) {
-    width: 89% !important;
 }
