--- a/codequiz-server/quiz/static/tasks/style2.css
+++ b/codequiz-server/quiz/static/tasks/style2.css
@@ -174,6 +174,12 @@ pre {
     font-family: Fixedsys, Courier, monospace;
 }
 
+code, tt {
+    font-size: 9pt;
+    font-weight: bold;
+    background-color: #ffffcc;
+}
+
 textarea {
     margin-top: 0px;
     margin-bottom: 0px;
@@ -223,7 +229,6 @@ input.gap:focus {
 .cell_4 {
     display: inline-block;
     width: 180px;
-
 }
 
 .sol_right {
