Remove ancient cbox.html template and references to it

--- a/codequiz-server/quiz/templates/tasks/cq2_cbox.html
+++ b/codequiz-server/quiz/templates/tasks/cq2_cbox.html
@@ -1,4 +1,4 @@
-<!-- ==> start: cbox.html -->
+<!-- ==> start: cq2_cbox.html -->
 
 <div class="grid_4 alpha">
     <div style="margin-left:-110px;text-align: right; width:100px; float: left">
@@ -24,5 +24,5 @@
 {% endif %}
 <div class="clear"></div>
 
-<!-- ==> end: cbox.html -->
+<!-- ==> end: cq2_cbox.html -->
 
